--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-asgiref==3.4.1
-Django==3.2
-django-filter==21.1
-djangorestframework==3.13.1
-pytz==2021.3
-sqlparse==0.4.2
-yapf==0.32.0
+Django==3.2.1
+django-cors-headers==3.10.0
+django-rest-knox==4.1.0
+django-rest-swagger==2.2.0
+djangorestframework==3.12.4
+drf-yasg==1.20.0
+gunicorn==20.1.0
+Pillow==9.0.0
