--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,10 @@ djangorestframework==3.12.4
 drf-yasg==1.20.0
 gunicorn==20.1.0
 Pillow==9.0.0
+psycopg2>=2.8
+requests==2.28.1
+Celery==4.3
+redis==4.3.3
+django-environ==0.10.0
+django-crispy-forms==2.0
+jango-cors-headers==3.10.0
