--- a/core/.env
+++ b/core/.env
@@ -1,3 +1,8 @@
 DEBUG=True
 SECRET_KEY='django-insecure-a1g)1du+@6h$c+u8hcpw9(r#7wjj%y0t)vy=9dju7@313le07s'
 DATABASE_URL='django-insecure-a1g)1du+@6h$c+u8hcpw9(r#7wjj%y0t)vy=9dju7@313le07s'
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=promotion
+DB_USER=appuser
+DB_PASSWORD=ashish@23
