update status env

--- a/core/.env
+++ b/core/.env
@@ -1,4 +1,4 @@
-DEBUG=True
+DEBUG=False
 SECRET_KEY='django-insecure-a1g)1du+@6h$c+u8hcpw9(r#7wjj%y0t)vy=9dju7@313le07s'
 DATABASE_URL='django-insecure-a1g)1du+@6h$c+u8hcpw9(r#7wjj%y0t)vy=9dju7@313le07s'
 DB_HOST=localhost
