--- a/core/.env
+++ b/core/.env
@@ -6,3 +6,7 @@ DB_PORT=5432
 DB_NAME=promotion
 DB_USER=appuser
 DB_PASSWORD=ashish@23
+AWS_ACCESS_KEY_ID='AKIAYOS7UCHK6MMM3S6O'
+AWS_SECRET_ACCESS_KEY='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'
+AWS_STORAGE_BUCKET_NAME='promotionmaro'
+AWS_S3_REGION_NAME='ap-south-1'
