--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ amqp==2.6.1
 asgiref==3.7.2
 async-timeout==4.0.2
 billiard==3.6.4.0
+boto3==1.28.20
+botocore==1.31.20
 celery==4.3.0
 certifi==2023.7.22
 cffi==1.15.1
@@ -16,6 +18,7 @@ django-crispy-forms==2.0
 django-environ==0.10.0
 django-rest-knox==4.1.0
 django-rest-swagger==2.2.0
+django-storages==1.13.2
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.20.0
@@ -24,6 +27,7 @@ idna==3.4
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+jmespath==1.0.1
 kombu==4.6.11
 MarkupSafe==2.1.3
 openapi-codec==1.3.2
@@ -32,12 +36,15 @@ Pillow==9.0.0
 psycopg2==2.9.6
 pycparser==2.21
 PyJWT==2.8.0
+python-dateutil==2.8.2
 pytz==2023.3
 redis==4.3.3
 requests==2.28.1
 ruamel.yaml==0.17.32
 ruamel.yaml.clib==0.2.7
+s3transfer==0.6.1
 simplejson==3.19.1
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 uritemplate==4.1.1
