--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ MarkupSafe==2.1.3
 openapi-codec==1.3.2
 packaging==23.1
 Pillow==9.0.0
-psycopg2==2.9.6
+psycopg2-binary==2.9.7
 pycparser==2.21
 PyJWT==2.8.0
 python-dateutil==2.8.2
